//
// Copyright (C) 2024 EA group inc.
// Author: Jeff.li lijippy@163.com
// All rights reserved.
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
//

syntax="proto2";
package sirius.proto;
option cc_generic_services = true;

enum ErrCode {
    /// for all success
    SUCCESS                     = 0;
    UNKNOWN_REQ_TYPE            = 1;
    INTERNAL_ERROR              = 2;
    /// for raft and raft machine
    NOT_LEADER                  = 3;
    RETRY_LATER                 = 4;
    EXEC_FAIL                   = 5;
    PEER_NOT_EQUAL              = 6;
    /// for pb

    PARSE_FROM_PB_FAIL          = 11;
    PARSE_TO_PB_FAIL            = 12;
    JSON_FROM_PB_FAIL           = 13;
    PB_TO_JSON_FAIL             = 14;

    INPUT_PARAM_ERROR           = 21;
    HAVE_NOT_INIT               = 22;

    CONFIG_EXISTS               = 31;
    CONFIG_VERSION_OLD          = 32;
    CONFIG_NOT_EXISTS           = 33;
    CONFIG_NOT_EXISTS_VERSION   = 34;
};